--- a/views/show.ejs
+++ b/views/show.ejs
@@ -23,16 +23,17 @@
      // draws it.
      function drawChart() {
 
+        var foundPoll = <%- JSON.stringify(test) %>;
+
        // Create the data table.
        var data = new google.visualization.DataTable();
-       data.addColumn('string', 'Pokemon');
+       data.addColumn('string', foundPoll.pollName);
        data.addColumn('number', 'Percentage');
        data.addRows([
          ['Charmander', 1],
          ['Squirtle', 1],
          ['Bulbasaur', 1]
        ]);
-       var foundPoll = <%- JSON.stringify(test) %>;
        // Set chart options
        var options = {'title':foundPoll.pollName,
                       'width':400,
