--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
           <a href="#a" class='navbar-brand'>FCC Voting App</a>
         </div> <!-- end navbar header -->
           <ul class='nav navbar-nav navbar-right'>
-          <li><a href="#a">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="#a">Sign Up</a></li>
           <li><a href="#a">Log In</a></li>
           </ul>
