--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,6 +2,7 @@
 
 <% var test = (foundPoll); %>
 <% var dataArray = dataArray; %>
+<% console.log(dataArray) %>
 
 <div class="text-center">
   <h1><%= foundPoll.pollName %></h1>
@@ -52,9 +53,9 @@
          <label for="">I'd Like to Vote For:</label>
          <select class="" name="vote">
            <option></option>
-           <option value=<%= foundPoll.item1 %>><%= foundPoll.item1 %> </option>
-           <option value=<%= foundPoll.item2 %>><%= foundPoll.item2 %>></option>
-           <option value=<%= foundPoll.item3 %>><%= foundPoll.item3 %>></option>
+           <option value=<%= foundPoll.item1.name %>><%= foundPoll.item1.name %> </option>
+           <option value=<%= foundPoll.item2.name %>><%= foundPoll.item2.name %></option>
+           <option value=<%= foundPoll.item3.name %>><%= foundPoll.item3.name %></option>
          </select>
          <button type="submit" name="button">Submit</button>
        </form>
