Creating a new poll works with however many options the user wants. As opposed to a hard coded 3 options only before'

--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,13 @@
 body{
-  
+
+}
+.navbar-default{
+  margin-bottom: 0;
+}
+.poll-landing{
+  height: 100%;
+  background: url('https://hd.unsplash.com/photo-1467173572719-f14b9fb86e5f');
+  background-size: cover;
 }
 
 #poll-container{
