--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,8 +1,10 @@
 <% include partials/header %>
 
-<div class='text-center'>
-<a href="/polls" class='btn btn-primary btn-lg '>View All Polls</a>
-</div>
+
+  <div class="container-fluid text-center poll-landing">
+    <a href="/polls" class='btn btn-primary btn-lg' style='margin-top: 20%;'>View All Polls</a>
+  </div>
+
 
 
 
