--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
         </div> <!-- end navbar header -->
           <ul class='nav navbar-nav navbar-right'>
           <li><a href="/">Home</a></li>
+          <li><a href="/polls">All Polls</a></li>
           <li><a href="#a">Sign Up</a></li>
           <li><a href="#a">Log In</a></li>
           </ul>
