--- a/public/main.css
+++ b/public/main.css
@@ -13,6 +13,7 @@ body{
 #poll-container{
   border: 2px solid black;
   border-radius: 10px;
+  margin-top: 20px;
   background-color: lightgray;
 }
 
