--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,6 +8,9 @@
   <p>
     Some random description about <%= foundPoll.pollName %>
   </p>
+  <% if(foundPoll.hasVoted){   %>
+  <h3>You Have Voted For: <%= foundPoll.userVote %></h3>
+   <% }   %>
 </div>
 
 <script type="text/javascript">
