--- a/views/show.ejs
+++ b/views/show.ejs
@@ -9,63 +9,71 @@
     Some random description about <%= foundPoll.pollName %>
   </p>
   <% if(foundPoll.hasVoted){   %>
-  <h3>You Have Voted For: <%= foundPoll.userVote %></h3>
-   <% }   %>
+    <h3>You Have Voted For: <%= foundPoll.userVote %></h3>
+    <% }   %>
+  </div>
+
+  <script type="text/javascript">
+
+  // Load the Visualization API and the corechart package.
+  google.charts.load('current', {'packages':['corechart']});
+
+  // Set a callback to run when the Google Visualization API is loaded.
+  google.charts.setOnLoadCallback(drawChart);
+
+  // Callback that creates and populates a data table,
+  // instantiates the pie chart, passes in the data and
+  // draws it.
+  function drawChart() {
+
+    var foundPoll = <%- JSON.stringify(test) %>;
+
+    // Create the data table.
+    var data = new google.visualization.DataTable();
+    data.addColumn('string', foundPoll.pollName);
+    data.addColumn('number', 'Percentage');
+
+    var dataArray = <%- JSON.stringify(dataArray) %>;
+    data.addRows(dataArray);
+    console.log(dataArray);
+    console.log(data);
+    // Set chart options
+    var options = {'title':foundPoll.pollName,
+    'width':800,
+    'height':800,
+    pieHole: 0.4
+  };
+
+  // Instantiate and draw our chart, passing in some options.
+  var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+  chart.draw(data, options);
+}
+</script>
+
+
+<div class="container">
+    <table>
+      <tr>
+        <td>
+  <form action="/polls/<%= foundPoll._id %>" method="post">
+    <label for="">I'd Like to Vote For:</label>
+    <select class="" name="vote">
+      <option></option>
+      <% foundPoll.items.forEach(function(poll){ %>
+        <option value=<%= poll.name %>><%= poll.name %></option>
+        <% }); %>
+      </select>
+      <button type="submit" name="button">Submit</button>
+    </form>
+  </td>
+  <td>
+    <div id='chart_div'>
+
+    </div>
+  </td>
+  </tr>
+  </table>
 </div>
 
-<script type="text/javascript">
 
-     // Load the Visualization API and the corechart package.
-     google.charts.load('current', {'packages':['corechart']});
-
-     // Set a callback to run when the Google Visualization API is loaded.
-     google.charts.setOnLoadCallback(drawChart);
-
-     // Callback that creates and populates a data table,
-     // instantiates the pie chart, passes in the data and
-     // draws it.
-     function drawChart() {
-
-        var foundPoll = <%- JSON.stringify(test) %>;
-
-       // Create the data table.
-       var data = new google.visualization.DataTable();
-       data.addColumn('string', foundPoll.pollName);
-       data.addColumn('number', 'Percentage');
-
-       var dataArray = <%- JSON.stringify(dataArray) %>;
-       data.addRows(dataArray);
-       console.log(dataArray);
-       console.log(data);
-       // Set chart options
-       var options = {'title':foundPoll.pollName,
-                      'width':500,
-                      'height':500
-                      };
-
-       // Instantiate and draw our chart, passing in some options.
-       var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-       chart.draw(data, options);
-     }
-   </script>
-
-
-   <div class="container">
-     <div class="">
-       <form class="" action="/polls/<%= foundPoll._id %>" method="post" class='pull-right'>
-         <label for="">I'd Like to Vote For:</label>
-         <select class="" name="vote">
-           <option></option>
-           <% foundPoll.items.forEach(function(poll){ %>
-             <option value=<%= poll.name %>><%= poll.name %></option>
-           <% }); %>
-         </select>
-         <button type="submit" name="button">Submit</button>
-       </form>
-     </div>
-     <div id='chart_div' style="width:400; height:300">
-
-     </div>
-   </div>
-
-   <% include partials/footer %>
+  <% include partials/footer %>
