If user has voted, it redirects to a new chart page. Working on centering chart

--- a/public/main.css
+++ b/public/main.css
@@ -23,6 +23,7 @@ body{
   border-radius: 10px;
 }
 
-#chart_div{
-  margin:auto;
+.voted-graph{
+  display: inline-block;
+  margin: 0 auto !important;
 }
