--- a/views/hasVoted.ejs
+++ b/views/hasVoted.ejs
@@ -37,8 +37,12 @@
     var options = {'title':foundPoll.pollName,
     'width':800,
     'height':800,
-    pieHole: 0.4
-  };
+    pieHole: 0.4,
+    is3D: true,
+    legend: {
+      position: 'top'
+    }
+    };
 
   // Instantiate and draw our chart, passing in some options.
   var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
@@ -47,10 +51,16 @@
 </script>
 
 
+<div class="container text-center">
+  <div class="row">
+    <div class="col-xs-12">
+      <div id='chart_div' class='voted-graph' align='center'>
 
-    <div id='chart_div' class='voted-graph' align='center'>
-
+      </div>
     </div>
+  </div>
+</div>
+
 
 
 
