Redirecting the POST Route to hasVoted if user has voted

--- a/views/hasVoted.ejs
+++ b/views/hasVoted.ejs
@@ -12,7 +12,13 @@
   </div>
 
   <script type="text/javascript">
+  window.onresize = function(){
+       drawChart();
+   };
 
+   window.onload = function(){
+       drawChart();
+   };
   // Load the Visualization API and the corechart package.
   google.charts.load('current', {'packages':['corechart']});
 
