--- a/views/hasVoted.ejs
+++ b/views/hasVoted.ejs
@@ -8,7 +8,7 @@
   <p>
     Some random description about <%= foundPoll.pollName %>
   </p>
-  <h2>You Have Voted For: <%= storedCookie %></h2>
+  <h2>You Have Voted For: <strong><em><%= storedCookie %></strong></em></h2>
   </div>
 
   <script type="text/javascript">
@@ -58,13 +58,9 @@
 
 
 <div class="container text-center">
-  <div class="row">
-    <div class="col-xs-12">
       <div id='chart_div' class='voted-graph' align='center'>
 
       </div>
-    </div>
-  </div>
 </div>
 
 
