--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
           <ul class='nav navbar-nav navbar-right'>
           <li><a href="/polls">All Polls</a></li>
           <li><a href="#a">Sign Up</a></li>
-          <li><a href="#a">Log In</a></li>
+          <li><a href="/login">Log In</a></li>
           </ul>
       </div> <!-- end navbar container -->
     </nav>
