--- a/public/main.css
+++ b/public/main.css
@@ -18,7 +18,8 @@ body{
 }
 
 #singlePoll{
-  background-color: white;
+  background-color: black;
+  color: white;
   border: 1px solid lightgray;
   border-radius: 10px;
 }
