--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 
   <body>
 
-    <nav class='navbar navbar-default'>
+    <nav class='navbar navbar-inverse'>
       <div class="container">
         <div class="navbar-header">
           <a href="#a" class='navbar-brand'>FCC Voting App</a>
