--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,9 +14,14 @@
           <a href="#a" class='navbar-brand'>FCC Voting App</a>
         </div> <!-- end navbar header -->
           <ul class='nav navbar-nav navbar-right'>
-          <li><a href="/polls">All Polls</a></li>
-          <li><a href="#a">Sign Up</a></li>
-          <li><a href="/login">Log In</a></li>
+          <% if(!currentUser){  %>
+            <li><a href="/polls">All Polls</a></li>
+            <li><a href="/register">Register</a></li>
+            <li><a href="/login">Log In</a></li>
+           <%  } else {  %>
+            <li><a href="/polls"><%= currentUser.username %></a></li>
+            <li><a href="/polls">Log Out</a></li>
+            <% }%>
           </ul>
       </div> <!-- end navbar container -->
     </nav>
