--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-
+    <% console.log(currentUser) %>
     <nav class='navbar navbar-inverse'>
       <div class="container">
         <div class="navbar-header">
@@ -18,9 +18,10 @@
             <li><a href="/polls">All Polls</a></li>
             <li><a href="/register">Register</a></li>
             <li><a href="/login">Log In</a></li>
+            <li><a href="/logout">Log Out</a></li>
            <%  } else {  %>
             <li><a href="/polls"><%= currentUser.username %></a></li>
-            <li><a href="/polls">Log Out</a></li>
+            <li><a href="/logout">Log Out</a></li>
             <% }%>
           </ul>
       </div> <!-- end navbar container -->
