--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,10 +3,10 @@
 <div style='width:50%; margin: 10% auto;'>
   <form class="" action="/login" method="post">
     <div class="form-group">
-      <input class='form-control' type="text" name="userName" value="" placeholder="User Name">
+      <input class='form-control' type="text" name="username" value="" placeholder="User Name">
     </div>
     <div class="form-group">
-      <input class='form-control' type="password" name="Password" value="" placeholder='Password'>
+      <input class='form-control' type="password" name="password" value="" placeholder='Password'>
     </div>
     <div class="form-group text-center">
       <button style='width: 100%;' class='btn btn-lg btn-primary'type="submit" name="button">Log In</button>
