--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,11 +18,21 @@
             <li><a href="/polls">All Polls</a></li>
             <li><a href="/register">Register</a></li>
             <li><a href="/login">Log In</a></li>
-            <li><a href="/logout">Log Out</a></li>
            <%  } else {  %>
-            <li><a href="/polls"><%= currentUser.username %></a></li>
+             <li class='dropdown'>
+                      <a href='#a' class='dropdown-toggle' data-toggle='dropdown' class='dropdown-toggle' id='dropdownMenu1' data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" ><i class='glyphicon glyphicon-user'></i> <%= currentUser.username %></a>
+                      <ul class='dropdown-menu'>
+                        <li><a href='/userPolls'>Settings</a></li>
+                      </ul>
+              </li>
             <li><a href="/logout">Log Out</a></li>
             <% }%>
           </ul>
       </div> <!-- end navbar container -->
     </nav>
+
+    <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
