--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,8 @@
              <li class='dropdown'>
                       <a href='#a' class='dropdown-toggle' data-toggle='dropdown' class='dropdown-toggle' id='dropdownMenu1' data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" ><i class='glyphicon glyphicon-user'></i> <%= currentUser.username %></a>
                       <ul class='dropdown-menu'>
-                        <li><a href='/userPolls'>Settings</a></li>
+                        <li><a href='/userPolls'>My Polls</a></li>
+                        <li><a href='/userPolls/createPoll'>Create A New Poll</a></li>
                       </ul>
               </li>
             <li><a href="/logout">Log Out</a></li>
