Working on the User add poll. Using JS to hide/show the forms

--- a/public/main.css
+++ b/public/main.css
@@ -29,3 +29,12 @@ body{
   margin-left:auto !important;
   margin-right: auto !important;
 }
+
+.askUserForm{
+  width: 50%;
+  margin: 5% auto;
+}
+
+.doneUserForm{
+  display: none;
+}
