--- a/views/newPollPage.ejs
+++ b/views/newPollPage.ejs
@@ -3,39 +3,22 @@
 <div class="container" style='margin-top: 10%;'>
   <h1 class='text-center'>Make A New Poll</h1>
 
-<div class="askUserForm">
-  <form>
+
+
+  <form action='/userPolls/createPoll/newPoll' method='post'class='doneUserForm'style='width: 50%; margin: 5% auto;'>
     <div class="form-group">
       <label for="">Poll Name</label>
-      <input id='optionName' class='form-control' type="text" placeholder='What is the name of your poll?'>
+      <input class='form-control realInput' type="text" name="pollName" placeholder='What is the name of your poll?'>
     </div>
-    <div class="form-group">
+    <div class="form-group pollOption">
 
           <label for="">Poll Options</label>
-          <input id='optionCount' class='form-control'type="text" placeholder='How Many Options?'>
-    </div>
-  </form>
-  <div class="form-group">
-      <button id='optionButton'class=' form-control btn btn-block btn-info'>Set A Poll</button>
-  </div>
-</div>
-
-
-  <form class='doneUserForm'style='width: 50%; margin: 5% auto;'>
-    <div class="form-group">
-      <label for="">Poll Name</label>
-      <input class='form-control' type="text" name="pollName" placeholder='What is the name of your poll?'>
-    </div>
-    <div class="form-group">
-
-          <label for="">Poll Options</label>
-          <input id='optionCount' class='form-control'type="text" name="name" placeholder='How Many Options?'>
+          <input class='form-control'type="text" name="pollOptions">
     </div>
     <div class="form-group">
         <button class=' form-control btn btn-block btn-info'>Set A Poll</button>
     </div>
   </form>
-</div>
 
 <script type="text/javascript" src='/JS/newUserPoll.js'>
 
