--- a/views/hasVoted.ejs
+++ b/views/hasVoted.ejs
@@ -2,6 +2,8 @@
 
 <% var test = (foundPoll); %>
 <% var dataArray = dataArray; %>
+<% var test = (foundPoll); %>
+
 
 <div class="text-center">
   <h1><%= foundPoll.pollName %></h1>
@@ -30,6 +32,7 @@
   // draws it.
   function drawChart() {
 
+    var foundPoll = <%- JSON.stringify(test) %>;
 
     // Create the data table.
     var data = new google.visualization.DataTable();
