--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <% console.log(currentUser); %>
     <nav class='navbar navbar-inverse'>
       <div class="container">
         <div class="navbar-header">
@@ -21,8 +22,8 @@
              <li class='dropdown'>
                       <a href='#a' class='dropdown-toggle' data-toggle='dropdown' class='dropdown-toggle' id='dropdownMenu1' data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" ><i class='glyphicon glyphicon-user'></i> <%= currentUser.username %></a>
                       <ul class='dropdown-menu'>
-                        <li><a href='/userPolls'>My Polls</a></li>
-                        <li><a href='/userPolls/createPoll'>Create A New Poll</a></li>
+                        <li><a href='/<%= currentUser._id %>/userPolls'>My Polls</a></li>
+                        <li><a href='/<%= currentUser._id %>/userPolls/createPoll'>Create A New Poll</a></li>
                       </ul>
               </li>
             <li><a href="/logout">Log Out</a></li>
