Working on User Delete own Poll(s)

--- a/public/main.css
+++ b/public/main.css
@@ -24,6 +24,9 @@ body{
   border-radius: 10px;
 }
 
+.userPolls{
+}
+
 .voted-graph{
   display: inline-block !important;
   margin-left:auto !important;
