--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
     <nav class='navbar navbar-inverse'>
       <div class="container">
         <div class="navbar-header">
-          <a href="#a" class='navbar-brand'>FCC Voting App</a>
+          <a href="/" class='navbar-brand'>FCC Voting App</a>
         </div> <!-- end navbar header -->
           <ul class='nav navbar-nav navbar-right'>
           <% if(!currentUser){  %>
