Made the delete button a part of a form that posts to the server, deletes the poll, and re-renders back to previous page

--- a/public/main.css
+++ b/public/main.css
@@ -25,6 +25,13 @@ body{
 }
 
 .userPolls{
+  margin: auto;
+  text-align: center;
+}
+
+.link {
+  margin-top: -10px;
+  margin-right: 5px;
 }
 
 .voted-graph{
