--- a/views/allUserPoll.ejs
+++ b/views/allUserPoll.ejs
@@ -1,21 +1,27 @@
 <% include partials/header %>
 <% console.log(foundUser); %>
-<div class="container-fluid">
+<div class="container">
   <h1 class='text-center'>All Polls for <em><%= foundUser.username %></em></h1>
 
   <% foundUser.polls.forEach(function(userPoll){ %>
 
-      <div class='col-lg-10'>
-       <div id='singlePoll' class="text-center userPolls">
-       <a href='/polls/<%= userPoll._id %>'</a>
-       <h3><%= userPoll.pollName %></h3>
-      </div>
-      </div>
-      <div class='col-lg-2'>
-        <button class='btn btn-danger'>Delete</button>
-      </div>
 
-  <%  })  %>
-</div>
+        <div id='singlePoll' class="text-center userPolls">
 
-<% include partials/footer %>
+          <h3>
+            <a href='/polls/<%= userPoll._id %>'><%= userPoll.pollName %></a>
+            <span id= '<%= userPoll._id %>'class='pull-right link'>
+              <form method='post' action='/<%= foundUser._id %>'>
+               <button class='btn btn-danger'name='<%= userPoll._id %>'>Delete</button>
+              </form>
+            </span>
+          </h3>
+        </div>
+
+
+    <%  })  %>
+  </div>
+
+
+
+  <% include partials/footer %>
