--- a/views/allUserPoll.ejs
+++ b/views/allUserPoll.ejs
@@ -1,5 +1,4 @@
 <% include partials/header %>
-<% console.log(foundUser); %>
 <div class="container">
   <h1 class='text-center'>All Polls for <em><%= foundUser.username %></em></h1>
 
@@ -11,7 +10,7 @@
           <h3>
             <a href='/polls/<%= userPoll._id %>'><%= userPoll.pollName %></a>
             <span id= '<%= userPoll._id %>'class='pull-right link'>
-              <form method='post' action='/<%= foundUser._id %>'>
+              <form method='post' action='/<%= userPoll._id %>/userPolls'>
                <button class='btn btn-danger'name='<%= userPoll._id %>'>Delete</button>
               </form>
             </span>
