--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <div style='width:50%; margin: 10% auto;'>
   <form class="" action="/login" method="post">
     <div class="form-group">
-      <input class='form-control' type="text" name="username" value="" placeholder="User Name">
+      <input class='form-control' type="text" name="username" value="" placeholder="User Name" autofocus='autofocus'>
     </div>
     <div class="form-group">
       <input class='form-control' type="password" name="password" value="" placeholder='Password'>
