--- a/views/newPollPage.ejs
+++ b/views/newPollPage.ejs
@@ -4,7 +4,7 @@
   <h1 class='text-center'>Make A New Poll</h1>
 
 
-
+<% console.log(id); %>
   <form action='/<%= id %>/userPolls/createPoll' method='post'class='doneUserForm'style='width: 50%; margin: 5% auto;'>
     <div class="form-group">
       <label for="">Poll Name</label>
@@ -13,14 +13,12 @@
     <div class="form-group pollOption">
 
           <label for="">Poll Options</label>
-          <input class='form-control'type="text" name="pollOptions">
+          <input class='form-control'type="text" name="pollOptions" placeholder='Enter Your Options Separated By Commas'>
     </div>
     <div class="form-group">
         <button class=' form-control btn btn-block btn-info'>Set A Poll</button>
     </div>
   </form>
 
-<script type="text/javascript" src='/JS/newUserPoll.js'>
 
-</script>
 <% include partials/footer %>
