Stable, everything is working as expected. Still figuring out why /createPoll is throwing a CastError

--- a/views/allUserPoll.ejs
+++ b/views/allUserPoll.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 <div class="container">
   <h1 class='text-center'>All Polls for <em><%= foundUser.username %></em></h1>
-
+<% console.log(foundUser); %>
   <% foundUser.polls.forEach(function(userPoll){ %>
 
 
