--- a/views/newPollPage.ejs
+++ b/views/newPollPage.ejs
@@ -5,7 +5,8 @@
 
 
 <% console.log(id); %>
-  <form action='/<%= id %>/userPolls/createPoll' method='post'class='doneUserForm'style='width: 50%; margin: 5% auto;'>
+  <form action='/<%= id %>/userPolls' method='post'class='doneUserForm'style='width: 50%; margin: 5% auto;'>
+
     <div class="form-group">
       <label for="">Poll Name</label>
       <input class='form-control realInput' type="text" name="pollName" placeholder='What is the name of your poll?'>
