--- a/views/show.ejs
+++ b/views/show.ejs
@@ -58,9 +58,16 @@
             <option value='<%= poll.name %>'><%= poll.name %></option>
             <% }); %>
           </select>
-          <button type="submit" name="button">Submit</button>
+          <button class='btn btn-primary'type="submit" name="button">Submit</button>
         </form>
+        <% if (currentUser){ %>
+          <form action='/polls/<%= foundPoll._id %>/addedVote' method='post'>
+            <input type='text' name='addedUserPoll' placeholder='Or Add A New Option'>
+            <button class='btn btn-info' type='submit' style='margin-top: 5px;'>Add New Option</button>
+          </form>
+        <%  }  %>
     </div>
+
     <div class="col-lg-10">
      <div id='chart_div'>
 
