--- a/views/polls.ejs
+++ b/views/polls.ejs
@@ -9,8 +9,9 @@
   <div  id='all-polls'>
     <% polls.forEach(function(poll){ %>
       <div id='singlePoll' class="text-center">
-      <a href='/polls/<%= poll._id %>'</a>
+      <a href='/polls/<%= poll._id %>'>
       <h3><%= poll.pollName %></h3>
+      </a>
       </div>
   <%  });  %>
   </div>
