--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,9 @@
 
-<footer id='footer'>
-  <p class='text-center'>
-    Think I'm done
+<div id='footer' class='text-center'>
+  <p >
+    Think I'm done. Time to make it pretty
   </p>
-</footer>
+</div>
   </body>
 
   </html>
