--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,5 @@
 body{
+  background-color: #F0F8FF;
 
 }
 
@@ -19,13 +20,19 @@ a:hover{
   border: 2px solid black;
   border-radius: 10px;
   margin-top: 20px;
-  background-color: #F0F8FF}
+  background-color: #00CED1;
+}
 
 #singlePoll{
   background-color: black;
   color: white;
   border: 1px solid lightgray;
   border-radius: 10px;
+}
+
+svg{
+  background-color: #F0F8FF ! important;
+
 }
 
 .userPolls{
@@ -42,6 +49,7 @@ a:hover{
   display: inline-block !important;
   margin-left:auto !important;
   margin-right: auto !important;
+  background-color: #F0F8FF !important;
 }
 
 #footer{
