--- a/public/main.css
+++ b/public/main.css
@@ -16,7 +16,7 @@ a:hover{
 }
 
 #poll-container{
-  /*font-family:  ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;*/
+  font-family:  ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;
   border: 2px solid black;
   border-radius: 10px;
   margin-top: 20px;
