--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,43 +11,9 @@
   </p>
   </div>
 
-  <script type="text/javascript">
-
-  // Load the Visualization API and the corechart package.
-  google.charts.load('current', {'packages':['corechart']});
-
-  // Set a callback to run when the Google Visualization API is loaded.
-  google.charts.setOnLoadCallback(drawChart);
-
-  // Callback that creates and populates a data table,
-  // instantiates the pie chart, passes in the data and
-  // draws it.
-  function drawChart() {
-
-    var foundPoll = <%- JSON.stringify(test) %>;
-
-    // Create the data table.
-    var data = new google.visualization.DataTable();
-    data.addColumn('string', foundPoll.pollName);
-    data.addColumn('number', 'Percentage');
-
-    var dataArray = <%- JSON.stringify(dataArray) %>;
-    data.addRows(dataArray);
-    // Set chart options
-    var options = {'title':foundPoll.pollName,
-    'width':800,
-    'height':800,
-    pieHole: 0.4
-  };
-
-  // Instantiate and draw our chart, passing in some options.
-  var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-  chart.draw(data, options);
-}
-</script>
 
 
-<div class="container">
+<div class="container main-poll">
   <div class="row">
     <div class="col-lg-2">
       <form class='poll-form'action="/polls/<%= foundPoll._id %>" method="post">
@@ -91,12 +57,44 @@
     </div>
 
     <div class="col-lg-10">
-     <div id='chart_div'>
-
-     </div>
+       <canvas id="myChart" width="300" height="300"></canvas>
    </div>
   </div>
 </div>
 
 
+  <script type='text/javascript'>
+  var foundPoll = <%- JSON.stringify(test)%>;
+  var dataArray = <%- JSON.stringify(dataArray) %>;
+
+  function randomNumber(){
+    return Math.floor(Math.random() * 256);
+  }
+  var backColor = [];
+  var labels = [];
+  var howMany = [];
+  for(var i = 0 ; i < dataArray.length; i ++){
+  labels.push(dataArray[i][0]);
+  howMany.push(dataArray[i][1]);
+  backColor.push('rgba('+randomNumber()+', '+ randomNumber()+ ', ' + randomNumber()+', 0.8)');
+
+  }
+
+    var ctx = document.getElementById("myChart");
+
+    var myChart = new Chart(ctx, {
+    type: 'pie',
+    data: {
+        labels: labels,
+        datasets: [{
+            label: '# of Votes',
+            data: howMany,
+            backgroundColor: backColor,
+            borderColor: backColor,
+            borderWidth: 1
+        }]
+    }
+  });
+
+  </script>
   <% include partials/footer %>
