--- a/views/hasVoted.ejs
+++ b/views/hasVoted.ejs
@@ -5,11 +5,9 @@
 <% var test = (foundPoll); %>
 
 <div class="text-center">
-  <h1><%= foundPoll.pollName %></h1>
-  <p>
-    Some random description about <%= foundPoll.pollName %>
-  </p>
-  <h2>You Have Voted For: <strong><em><%= storedCookie %></strong></em></h2>
+<h1><strong><%= foundPoll.pollName %></strong></h1>
+  <hr>
+  <h3>You Have Voted For: <strong><em><%= storedCookie %></strong></em></h3>
   </div>
 
 
@@ -31,10 +29,12 @@ function randomNumber(){
 var labels = [];
 var howMany = [];
 var backColor = [];
-for(var i = 0 ; i < 10; i ++){
+console.log(dataArray);
+for(var i = 0 ; i < dataArray.length; i ++){
 labels.push(dataArray[i][0]);
 howMany.push(dataArray[i][1]);
 backColor.push('rgba('+randomNumber()+', '+ randomNumber()+ ', ' + randomNumber()+', 0.8)');
+
 }
 
   var ctx = document.getElementById("myChart");
@@ -50,9 +50,14 @@ backColor.push('rgba('+randomNumber()+', '+ randomNumber()+ ', ' + randomNumber(
           borderColor: backColor,
           borderWidth: 1
       }]
+  },
+  options:{
+    rotation: 0.5 * Math.PI
   }
 });
 
 </script>
 
-  <% include partials/footer %>
+</body>
+
+</html>
