--- a/views/show.ejs
+++ b/views/show.ejs
@@ -84,7 +84,7 @@
     var ctx = document.getElementById("showChart");
 
     var myChart = new Chart(ctx, {
-    type: 'pie',
+    type: 'bar',
     data: {
         labels: labels,
         datasets: [{
