--- a/views/show.ejs
+++ b/views/show.ejs
@@ -27,7 +27,7 @@
           </select>
           <button class='btn btn-block btn-primary'type="submit" name="button">Submit</button>
         </form>
-        <% if (currentUser){ %>
+        <% if (currentUser && foundPoll.items.length <= 10){ %>
           <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Or Add A New Option</button>
 
 <!-- Modal -->
