Sticking with pie chart

--- a/views/hasVoted.ejs
+++ b/views/hasVoted.ejs
@@ -40,7 +40,7 @@ backColor.push('rgba('+randomNumber()+', '+ randomNumber()+ ', ' + randomNumber(
   var ctx = document.getElementById("myChart");
 
   var myChart = new Chart(ctx, {
-  type: 'bar',
+  type: 'pie',
   data: {
       labels: labels,
       datasets: [{
