Taking out footer + unneccesary description

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,9 @@
 
-<div id='footer' class='text-center'>
+<!--<div id='footer' class='text-center'>
   <p >
     Think I'm done. Time to make it pretty
   </p>
-</div>
+</div>-->
   </body>
 
   </html>
