--- a/public/main.css
+++ b/public/main.css
@@ -19,6 +19,10 @@ body{
 
 }
 
+.navbar-brand{
+  font-size: 24px;
+}
+
 a:hover{
   cursor: hand
 }
@@ -27,7 +31,7 @@ a:hover{
 }
 
 .nav>li>a{
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .poll-landing{
