--- a/public/main.css
+++ b/public/main.css
@@ -44,8 +44,9 @@ a:hover{
   font-family:  ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;
   border: 2px solid black;
   border-radius: 10px;
-  margin-top: 20px;
+  margin-top: 2%;
   background-color: #00CED1;
+  padding-bottom: 10px;
 }
 
 #singlePoll{
