--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <html>
 
   <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/main.css" />
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -9,7 +10,7 @@
 
   <body>
     <nav class='navbar navbar-inverse'>
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <a href="/" class='navbar-brand'>FCC Voting App</a>
         </div> <!-- end navbar header -->
